<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.upl</groupId>
    <artifactId>compiler</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

<!--        <plugin>-->
<!--            <groupId>de.jflex</groupId>-->
<!--            <artifactId>jflex-maven-plugin</artifactId>-->
<!--            <version>1.9.1</version>-->
<!--            <executions>-->
<!--                <execution>-->
<!--                    <goals>-->
<!--                        <goal>generate</goal>-->
<!--                    </goals>-->
<!--                    <configuration>-->
<!--                        <outputDirectory>src/main/java</outputDirectory>-->
<!--                        <lexDefinitions>-->
<!--                            <lexDefinition>src/main/jflex</lexDefinition>-->
<!--                            <lexDefinition>src/main/lex/preprocessor.jflex</lexDefinition>-->
<!--                            <lexDefinition>/pub/postprocessor.jflex</lexDefinition>-->
<!--                        </lexDefinitions>-->
<!--                    </configuration>-->
<!--                </execution>-->
<!--            </executions>-->
<!--        </plugin>-->
    </properties>

    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.1</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
</project>